code/python/CompanyLogoAPIforDigitalPortals/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Company Logo API for Digital Portals client library for Python

[![PyPi](https://img.shields.io/pypi/v/fds.sdk.CompanyLogoAPIforDigitalPortals)](https://pypi.org/project/fds.sdk.CompanyLogoAPIforDigitalPortals/)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 0.9.4
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.CompanyLogoAPIforDigitalPortals
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.CompanyLogoAPIforDigitalPortals
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

```python

from fds.sdk.utils.authentication import ConfidentialClient
import fds.sdk.CompanyLogoAPIforDigitalPortals
from fds.sdk.CompanyLogoAPIforDigitalPortals.api import company_api
from fds.sdk.CompanyLogoAPIforDigitalPortals.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.CompanyLogoAPIforDigitalPortals.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.CompanyLogoAPIforDigitalPortals.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.CompanyLogoAPIforDigitalPortals.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = company_api.CompanyApi(api_client)
    id = "id_example" # str | Identifier of an instrument.
    attributes = [
        "_attributes_example",
    ] # [str] | Limit the attributes returned in the response to the specified set. (optional)

    try:
        # URLs of company logos.
        api_response = api_instance.get_company_logo_get_by_instrument(id, attributes=attributes)
        pprint(api_response)
    except fds.sdk.CompanyLogoAPIforDigitalPortals.ApiException as e:
        print("Exception when calling CompanyApi->get_company_logo_get_by_instrument: %s\n" % e)

    # Get response, http status code and response headers
    # try:
    #     # URLs of company logos.
    #     api_response, http_status_code, response_headers = api_instance.get_company_logo_get_by_instrument_with_http_info(id, attributes=attributes)
    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.CompanyLogoAPIforDigitalPortals.ApiException as e:
    #     print("Exception when calling CompanyApi->get_company_logo_get_by_instrument: %s\n" % e)

    # Get response asynchronous
    # try:
    #     # URLs of company logos.
    #     async_result = api_instance.get_company_logo_get_by_instrument_async(id, attributes=attributes)
    #     api_response = async_result.get()
    #     pprint(api_response)
    # except fds.sdk.CompanyLogoAPIforDigitalPortals.ApiException as e:
    #     print("Exception when calling CompanyApi->get_company_logo_get_by_instrument: %s\n" % e)

    # Get response, http status code and response headers asynchronous
    # try:
    #     # URLs of company logos.
    #     async_result = api_instance.get_company_logo_get_by_instrument_with_http_info_async(id, attributes=attributes)
    #     api_response, http_status_code, response_headers = async_result.get()
    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.CompanyLogoAPIforDigitalPortals.ApiException as e:
    #     print("Exception when calling CompanyApi->get_company_logo_get_by_instrument: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *http://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CompanyApi* | [**get_company_logo_get_by_instrument**](docs/CompanyApi.md#get_company_logo_get_by_instrument) | **GET** /company/logo/getByInstrument | URLs of company logos.


## Documentation For Models

 - [AttributesMember](docs/AttributesMember.md)
 - [CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [ErrorMetaObject](docs/ErrorMetaObject.md)
 - [ErrorObject](docs/ErrorObject.md)
 - [InlineResponse200](docs/InlineResponse200.md)
 - [InlineResponse200Data](docs/InlineResponse200Data.md)
 - [InlineResponse200DataLarge](docs/InlineResponse200DataLarge.md)
 - [InlineResponse200DataMedium](docs/InlineResponse200DataMedium.md)
 - [InlineResponse200DataSmall](docs/InlineResponse200DataSmall.md)
 - [InlineResponse200DataVector](docs/InlineResponse200DataVector.md)
 - [InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [LanguageMember](docs/LanguageMember.md)
 - [OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [PartialOutputObject](docs/PartialOutputObject.md)
 - [StatusObject](docs/StatusObject.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.CompanyLogoAPIforDigitalPortals.apis and fds.sdk.CompanyLogoAPIforDigitalPortals.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.CompanyLogoAPIforDigitalPortals.api.default_api import DefaultApi`
- `from fds.sdk.CompanyLogoAPIforDigitalPortals.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.CompanyLogoAPIforDigitalPortals
from fds.sdk.CompanyLogoAPIforDigitalPortals.apis import *
from fds.sdk.CompanyLogoAPIforDigitalPortals.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

